--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -25,6 +25,7 @@ dependencies {
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:30.1.1-jre'
+    implementation 'com.google.code.gson:gson:2.8.8'
 }
 
 tasks.named('test') {
